2020-07-30  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/upnp/SSDP.java:
	Initial writing.  Common interface in Device and Service hierarchy
	to support UPnP Discovery.  Implemented methods in subclasses.

2020-07-29  Allen D. Ball  <ball@hcf.dev>

	* Added <ssdp-m-search/> Ant Task and build target.

2020-07-28  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryService.java:
	Added send(int,SocketAddress,List<? extends SSDPMessage>) to honor
	requestor's MX parameter.

	* src/main/java/ball/upnp/Device.java,
	src/main/java/ball/upnp/AbstractDevice.java:
	Added getUSNs() method.

2020-07-27  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/upnp/RootDevice.java: Initial writing.

2020-07-26  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryCache.java:
	Created RequestHandler and ResponseHandler instances to handle
	NOTIFY requests and M-SEARCH responses, respectively.

	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryService.java:
	Added register(SSDPDiscoveryService) and
	unregister(SSDPDiscoveryService) methods to Listener interface.
	Added abstract (inner) RequestHandler and ResponseHandler base
	classes.

	* Replaced SSDPMessage class hierarchy with SSDPRequest and
	SSDPResponse factory methods.

2020-07-25  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryService.java:
	Added DatagramSocket parameter to Listener methods.
	Added delay parameter to multicast and send methods.

2020-07-24  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryService.java:
	Use a separate DatagramSocket for sending.
	Condition SO_TIMEOUT in receive(DatagramSocket).

2020-07-23  Allen D. Ball  <ball@hcf.dev>

	* Re-factored SSDPMessage hierarchy.

2020-07-22  Allen D. Ball  <ball@hcf.dev>

	* Added SSDPDiscoveryResponse, SSDPNotifyAliveRequest, and
	SSDPNotifyByeByeRequest.

	* Converted SSDPDiscoveryThread to SSDPDiscoveryService and use
	Java 7 MulticastSocket.
